@@ -54,8 +54,11 @@
 
 /* Visual C does not define these functions */
 #if defined(_MSC_VER)
-  #define copysignf _copysign
-  #define copysign _copysign
+  #define copysignf(x, y) ((float)_copysign(x, y))
+  #define copysign(x, y) _copysign(x, y)
+  #define nextafterf(x, y) _nextafterf(x, y)
+  #define nextafter(x, y) _nextafter(x, y)
+  #define _ODE__NEXTAFTERF_REQUIRED
 #endif
 
 
